--- a/Hexaequo V2/index.html
+++ b/Hexaequo V2/index.html
@@ -12,7 +12,7 @@
     <button id="toggleColorSchemeBtn">Color</button>
     <button id="toggleGridBtn">Grid</button>
     <button id="toggleModeBtn">Switch to AI Mode</button>
-    <div style="height: 20px;"></div>
+    <!-- <div style="height: 20px;"></div>
     <div id="inventories" style="display: flex; justify-content: center; gap: 40px; margin-bottom: 5px;">
         <div id="blackInventory" style="min-width: 120px; text-align: center;"></div>
         <div id="whiteInventory" style="min-width: 120px; text-align: center;"></div>
@@ -28,7 +28,7 @@
     <div id="capturedInventories" style="display: flex; justify-content: center; gap: 40px; margin-bottom: 5px;">
         <div id="blackCaptured" style="min-width: 120px; text-align: center;"></div>
         <div id="whiteCaptured" style="min-width: 120px; text-align: center;"></div>
-    </div>
+    </div> -->
     <div id="playerStatus" style="margin: 10px; font-size: 1.2em; font-weight: bold;"></div>
     <canvas id="gameCanvas" width="800" height="600"></canvas>
     <script src="game.js"></script>
