--- a/Hexaequo V2/index.html
+++ b/Hexaequo V2/index.html
@@ -3,14 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hexaequo V2 Game</title>
+    <title>HEXAEQUO</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>HEXAEQUO</h1>
-    <button id="toggleCoordsBtn">Coordinates</button>
-    <button id="toggleColorSchemeBtn">Color</button>
-    <button id="toggleGridBtn">Grid</button>
+    <div style="text-align: center; margin: 20px 0;">
+        <img src="logo.png" alt="Hexaequo Logo" style="max-width: 200px; height: auto;">
+    </div>
+    <h1 style="display: none;">HEXAEQUO</h1> <!-- Hidden for accessibility -->
+    <button id="toggleCoordsBtn" style="display: none;">Coordinates</button>
+    <button id="toggleColorSchemeBtn" style="display: none;">Color</button>
+    <button id="toggleGridBtn" style="display: none;">Grid</button>
     <button id="toggleModeBtn">Switch to AI Mode</button>
     <!-- <div style="height: 20px;"></div>
     <div id="inventories" style="display: flex; justify-content: center; gap: 40px; margin-bottom: 5px;">
